# DIALECTA

./: .gitignore  README.md  docker-compose.yml
Docs/: AI_INSTRUCTIONS.md  APP_FLOW.md  ARCHITECTURE.md  BACKEND_SCHEMA.md  PRD.md  README.md  TRD.md  UI_UX.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  main.py
backend/app/agents/: orchestrator.py  prompts.py  runner.py
backend/app/api/: routes.py
backend/app/db/: session.py
backend/app/mcp/: context.py
backend/app/mcp/providers/: gmail.py  google_calendar.py
backend/app/models/: orm.py
backend/app/schemas/: api.py
backend/app/services/: crypto.py
backend/dialecta_backend.egg-info/: SOURCES.txt  requires.txt
backend/scripts/: seed_demo_user.py
backend/tests/: conftest.py  test_orchestrator.py  test_privacy.py  test_runner.py
dashboard/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
dashboard/src/components/: DebateView.tsx  Sidebar.tsx
dashboard/src/lib/: agent-style.ts  api.ts
design-system/dialecta/: MASTER.md
design-system/dialecta/pages/: dashboard.md  intervention-popup.md  live-debate.md
extension/: README.md  manifest.json  package-lock.json  package.json  tsconfig.json
extension/scripts/: copy-static.mjs
extension/src/background/: service-worker.ts
extension/src/content/: overlay.css  (+1 more)
(+10 files in other folders)
